@@ -84,6 +84,14 @@ will be recreated, but the build directory won't be cleaned.  This is a big
 time saver, and should give the same results.  Using the <a
 href="#cmdline-refresh-build">--refresh-build</a> option will still cause the
 build directory to be cleaned at this point.</li>
+
+<li>Added new option, <a
+href="#conf-make-install-prefix">make-install-prefix</a>, which is a
+space-separated command (and options) to prefix the make command with when
+installing modules.  This is useful for using sudo to automatically install
+packages with root privileges, but be careful!  If you don't run this script
+from a terminal and you have this option set, you will have no way to enter a
+password if you need to.</li>
 </ul>
 
 <p><b>2004-Jun-13:</b> v0.72 -- <em>This Should Work Edition&trade;</em><br/>
@@ -495,6 +503,15 @@ version 0.64.
 </td>
 </tr>
 
+<tr id="conf-make-install-prefix">
+<td valign="top">make-install-prefix</td>
+<td valign="top">Overrides global</td>
+<td>Set this variable to a space-separated list, which is interpreted as a
+command and its options to precede the make install command used to install
+modules.  This is useful for installing packages with sudo for example, but
+please be careful while dealing with root privileges.</td>
+</tr>
+
 <tr id="conf-make-options">
 <td valign="top">make-options</td>
 <td valign="top">Overrides global</td>
@@ -716,7 +733,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Sun Jun 13 22:10:28 2004</font>
+Last modified: Sun Jun 13 22:47:32 2004</font>
 </div>
 </body>
 </html>
