@@ -1,6 +1,7 @@
 Version history: 0.73
  * Improved autorebuilder process.  Now the module's build directory won't be
    unnecessarily cleaned.
+ * Added new configuration file option make-install-prefix.
 
 Version history: 0.72
  * qt-copy bugfix #6564: There's no reason to try to download the admin dir
